--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     <!-- header -->
     <header>
-      <div class="header1">
-        <div class="header" data-aos="fade-left">
+      <div class="header1" data-aos="fade-left" data-aos-duration="3000">
+        <div class="header">
           <h1>Interior Renovation</h1>
           <p>
             Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -37,16 +37,16 @@
       <!-- container -->
       <div class="container">
         <!-- h -->
-        <div class="hh" data-aos="fade-down">
+        <div class="hh" data-aos="fade-down" data-aos-duration="1000">
           <p>We design beautiful hotels</p>
         </div>
         <!-- end of h -->
 
         <!-- grid -->
-        <div class="grid1" data-aos="fade-up">
+        <div class="grid1" data-aos="fade-up" data-aos-duration="1000">
           <div class="grid">
             <div class="empty"></div>
-            <div class="icon" data-aos="fade-left">
+            <div class="icon" data-aos="fade-left" data-aos-duration="1000">
               <svg class="u-svg-content" viewBox="0 0 512 512" id="svg-078c">
                 <g>
                   <path
@@ -66,7 +66,7 @@
           </div>
           <div class="grid">
             <div class="empty"></div>
-            <div class="icon" data-aos="fade-left">
+            <div class="icon" data-aos="fade-left" data-aos-duration="1000">
               <svg class="u-svg-content" viewBox="0 0 512 512" id="svg-c30b">
                 <g>
                   <g>
@@ -115,7 +115,7 @@
           </div>
           <div class="grid">
             <div class="empty"></div>
-            <div class="icon" data-aos="fade-left">
+            <div class="icon" data-aos="fade-left" data-aos-duration="1000">
               <svg class="u-svg-content" viewBox="0 0 512 512" id="svg-46d3">
                 <g>
                   <path
@@ -132,7 +132,7 @@
           </div>
           <div class="grid">
             <div class="empty"></div>
-            <div class="icon" data-aos="fade-left">
+            <div class="icon" data-aos="fade-left" data-aos-duration="1000">
               <img
                 src="/image/download (1).png"
                 width="40px"
@@ -152,7 +152,11 @@
         <!-- image-container -->
         <div class="image-container">
           <!-- decorating -->
-          <div class="decorating1" data-aos="slide-down" data-aos-duration="2000">
+          <div
+            class="decorating1"
+            data-aos="fade-down"
+            data-aos-duration="2000"
+          >
             <div class="decorating">
               <p class="d">Decorating Ideas</p>
               <p>
@@ -168,25 +172,25 @@
           </div>
           <!-- end of decorating -->
           <!-- img1 -->
-          <div class="img1" data-aos="fade-right" data-aos-duration="2000">
+          <div class="img1" data-aos="fade-right" data-aos-duration="3000">
             <img src="/image/bnbnbnbnnb.jpg" alt="" />
           </div>
           <!-- end of img1 -->
 
           <!-- img2 -->
-          <div class="img2" data-aos="fade-left" data-aos-duration="2000">
+          <div class="img2" data-aos="zoom-in" data-aos-duration="3000">
             <img src="/image/vbvbvbvbb.jpg" alt="" />
           </div>
           <!-- end of img2 -->
 
           <!-- img3 -->
-          <div class="img3" data-aos="fade-up" data-aos-duration="1000">
+          <div class="img3" data-aos="fade-up" data-aos-duration="2000">
             <img src="/image/-min.jpg" alt="" />
           </div>
           <!-- end of img3 -->
 
           <!-- img4 -->
-          <div class="img4" data-aos="fade-left" data-aos-duration="2000">
+          <div class="img4" data-aos="zoom-in" data-aos-duration="1000">
             <img src="/image/vvvvvvvvvvvvv-min.jpg" alt="" />
           </div>
           <!-- end of img4 -->
@@ -258,6 +262,67 @@
       <!-- end of section -->
     </main>
     <!-- end of main -->
+
+    <!-- section-container -->
+    <div class="section-container">
+      <div class="driven">
+        <div class="we">
+          <p>We are driven to inspire our clients</p>
+          <div class="ven">
+            <p>
+              Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+              cupidatat non.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="concept-container">
+        <div class="concept1">
+          <div class="concept-image">
+            <img src="/image/9da95226-56c8-3c05-a473-ecb7789f3ea2.jpg" alt="" />
+          </div>
+          <div class="cp"><p>Concepts</p></div>
+          <p>
+            Etiam erat velit scelerisque in dictum non consectetur. Nisl purus
+            in mollis nunc sed id semper. Cras fermentum odio eu feugiat pretium
+            nibh ipsum. Tristique senectus.
+          </p>
+          <div class="mo">
+            <a href=""><p>MORE</p></a>
+          </div>
+        </div>
+        <div class="concept2">
+          <div class="concept-image">
+            <img src="/image/ddddddddddddd.jpg" alt="" />
+          </div>
+          <div class="cp"><p>Prototyping</p></div>
+          <p>
+            Etiam erat velit scelerisque in dictum non consectetur. Nisl purus
+            in mollis nunc sed id semper. Cras fermentum odio eu feugiat pretium
+            nibh ipsum. Tristique senectus.
+          </p>
+          <div class="mo">
+            <a href=""><p>MORE</p></a>
+          </div>
+        </div>
+        <div class="concept3">
+          <div class="concept-image">
+            <img src="/image/bnbn.jpg" alt="" />
+          </div>
+          <div class="cp"><p>Interior</p></div>
+          <p>
+            Etiam erat velit scelerisque in dictum non consectetur. Nisl purus
+            in mollis nunc sed id semper. Cras fermentum odio eu feugiat pretium
+            nibh ipsum. Tristique senectus.
+          </p>
+          <div class="mo">
+            <a href=""><p>MORE</p></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end of section-container -->
 
     <!-- footer -->
     <footer></footer>
