--- a/index.html
+++ b/index.html
@@ -277,52 +277,110 @@
           </div>
         </div>
       </div>
-      <div class="concept-container">
-        <div class="concept1">
-          <div class="concept-image">
-            <img src="/image/9da95226-56c8-3c05-a473-ecb7789f3ea2.jpg" alt="" />
+      <div class="concept-container1">
+        <div class="concept-container">
+          <div class="concept1">
+            <div class="concept-image">
+              <img
+                src="/image/9da95226-56c8-3c05-a473-ecb7789f3ea2.jpg"
+                alt=""
+              />
+            </div>
+            <div class="cp"><p>Concepts</p></div>
+            <p>
+              Etiam erat velit scelerisque in dictum non consectetur. Nisl purus
+              in mollis nunc sed id semper. Cras fermentum odio eu feugiat
+              pretium nibh ipsum. Tristique senectus.
+            </p>
+            <div class="mo">
+              <a href=""><p>MORE</p></a>
+            </div>
           </div>
-          <div class="cp"><p>Concepts</p></div>
-          <p>
-            Etiam erat velit scelerisque in dictum non consectetur. Nisl purus
-            in mollis nunc sed id semper. Cras fermentum odio eu feugiat pretium
-            nibh ipsum. Tristique senectus.
-          </p>
-          <div class="mo">
-            <a href=""><p>MORE</p></a>
+          <div class="concept2">
+            <div class="concept-image">
+              <img src="/image/ddddddddddddd.jpg" alt="" />
+            </div>
+            <div class="cp"><p>Prototyping</p></div>
+            <p>
+              Etiam erat velit scelerisque in dictum non consectetur. Nisl purus
+              in mollis nunc sed id semper. Cras fermentum odio eu feugiat
+              pretium nibh ipsum. Tristique senectus.
+            </p>
+            <div class="mo">
+              <a href=""><p>MORE</p></a>
+            </div>
           </div>
-        </div>
-        <div class="concept2">
-          <div class="concept-image">
-            <img src="/image/ddddddddddddd.jpg" alt="" />
-          </div>
-          <div class="cp"><p>Prototyping</p></div>
-          <p>
-            Etiam erat velit scelerisque in dictum non consectetur. Nisl purus
-            in mollis nunc sed id semper. Cras fermentum odio eu feugiat pretium
-            nibh ipsum. Tristique senectus.
-          </p>
-          <div class="mo">
-            <a href=""><p>MORE</p></a>
-          </div>
-        </div>
-        <div class="concept3">
-          <div class="concept-image">
-            <img src="/image/bnbn.jpg" alt="" />
-          </div>
-          <div class="cp"><p>Interior</p></div>
-          <p>
-            Etiam erat velit scelerisque in dictum non consectetur. Nisl purus
-            in mollis nunc sed id semper. Cras fermentum odio eu feugiat pretium
-            nibh ipsum. Tristique senectus.
-          </p>
-          <div class="mo">
-            <a href=""><p>MORE</p></a>
+          <div class="concept3">
+            <div class="concept-image">
+              <img src="/image/bnbn.jpg" alt="" />
+            </div>
+            <div class="cp"><p>Interior</p></div>
+            <p>
+              Etiam erat velit scelerisque in dictum non consectetur. Nisl purus
+              in mollis nunc sed id semper. Cras fermentum odio eu feugiat
+              pretium nibh ipsum. Tristique senectus.
+            </p>
+            <div class="mo">
+              <a href=""><p>MORE</p></a>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <!-- end of section-container -->
+
+    <!-- section1 -->
+    <div class="section1">
+      <div class="interior1">
+        <div class="img-int">
+          <img src="/image/vbvbvbvb.png" alt="" />
+        </div>
+        <div class="int">
+          <p>Interior Design and Space Planning</p>
+          <p>
+            In dictum non consectetur a erat nam at. Turpis egestas maecenas
+            pharetra convallis posuere morbi. Scelerisque purus semper eget
+            duis. Dui id ornare arcu odio ut sem nulla pharetra.
+          </p>
+        </div>
+      </div>
+
+      <div class="interior2">
+        <div class="img-int1">
+          <img src="/image/g.jpg" alt="" />
+        </div>
+        <div class="intb"></div>
+        <div class="intb1">
+          <p>
+            Quis commodo odio aenean sed. Risus viverra adipiscing at in tellus
+            integer feugiat scelerisque varius. Sit amet aliquam id diam. Eget
+            dolor morbi non arcu risus quis varius quam. Fermentum posuere urna
+            nec tincidunt praesent semper feugiat nibh sed. Urna id volutpat
+            lacus laoreet.
+          </p>
+          <a href=""><p class="more">Learn More</p></a>
+        </div>
+      </div>
+    </div>
+    <!-- end of section1 -->
+
+    <!-- create-container -->
+    <div class="create-container">
+      <div class="create">
+        <p class="cr">We create unique interior designs</p>
+        <p>
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+          dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident
+        </p>
+        <a href=""><p class="te">Learn More</p></a>
+      </div>
+      <div class="img-create">
+        <img src="/image/dddd.jpg" alt="" />
+      </div>
+      <div class="ccc"></div>
+    </div>
+    <!-- end of create-container -->
 
     <!-- footer -->
     <footer></footer>
