--- a/index.html
+++ b/index.html
@@ -381,7 +381,34 @@
       <div class="ccc"></div>
     </div>
     <!-- end of create-container -->
-
+    <div class="hii">
+      <p>Interior Designers</p>
+    </div>
+    <div class="projects">
+      <div class="img-pro">
+        <img src="" alt="">
+      </div>
+      <div class="finished">
+        <div class="fsvg"></div>
+        <div class="fani"></div>
+        <div class="ftext"></div>
+      </div>
+      <div class="finished">
+        <div class="fsvg"></div>
+        <div class="fani"></div>
+        <div class="ftext"></div>
+      </div>
+      <div class="finished">
+        <div class="fsvg"></div>
+        <div class="fani"></div>
+        <div class="ftext"></div>
+      </div>
+      <div class="finished">
+        <div class="fsvg"></div> 
+        <div class="fani"></div>
+        <div class="ftext"></div>
+      </div>
+    </div>
     <!-- footer -->
     <footer></footer>
     <!-- end of footer -->
